--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Foong Soon Cheong</h1>
+        <h1>FS Cheong</h1>
         <p>New York University – Shanghai</p>
       </header>
 
