--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>fscheong</title>
+    <title>FS Cheong</title>
     <base href="https://pages-themes.github.io/leap-day/" target="_blank">
     <link rel="stylesheet" href="/leap-day/assets/css/style.css?v=4d2d418de73cc3f3cf5fd4656207cf73ff466e35">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
