--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="robots" content="noindex">
+    <meta name="googlebot" content="noindex">
     <title>FS Cheong</title>
     <base href="https://pages-themes.github.io/leap-day/" target="_blank">
     <link rel="stylesheet" href="/leap-day/assets/css/style.css?v=4d2d418de73cc3f3cf5fd4656207cf73ff466e35">
