--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <ul><li>PhD, Management<br> Yale University</li><br>
 <li>MEng, High Performance Computing<br> National University of Singapore</li><br>
 <li>BEng, Electrical Engineering<br> National University of Singapore</li><br>
-<li>Exchange (one year), Computer Engineering (ECE)<br> Carnegie Mellon University</li><br>
+<li>Exchange (one year), Computer Engineering<br> Carnegie Mellon University</li><br>
 <li>Association of Chartered Certified Accountants (ACCA)</li>
 </ul>
 
