--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
 <script>
 $(function() {
   $('#jokes').typed({
-    strings: ["Welcome to the accounting department, where everybody counts.", 
-              "Q: Why are accountants so calm and composed?", "A: We have strong internal controls.", 
+    strings: ["Welcome to the accounting department", 
+              "... where everyone counts.", 
+              "Q: Why are accountants so calm?", "A: We have strong internal controls.", 
               "Q: Where do homeless accountants live?",  "A: In a tax shelter."],
     typeSpeed: 50,
     backDelay: 500,
