--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <script>
 $(function() {
   $('#jokes').typed({
-    strings: ["Welcome to the accounting department,  where everyone counts.", 
+    strings: ["Welcome to the accounting universe,  where everyone counts.", 
               "Q: Why are accountants so calm?", "A: We have strong internal controls.", 
               "There are 10 types of programmers...", "... those who understand binary and those who don't."],
     typeSpeed: 50,
