--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@
 <script>
 $(function() {
   $('#jokes').typed({
-    strings: ["Welcome to the accounting universe,  where everyone counts.", 
-              "Q: Why are accountants so calm?", "A: We have strong internal controls.", 
-              "There are 10 types of programmers...", "... those who understand binary and those who don't."],
+    strings: ["Q: Why are accountants so calm and composed?", "A: Becos we have strong internal controls.", 
+              "There are 10 types of programmers", "... Those who understand binary and those who don't."],
     typeSpeed: 50,
     backDelay: 500,
     loop: true,
