--- a/index.html
+++ b/index.html
@@ -86,9 +86,15 @@
 <p>At Rutgers, I was nominated four times by the department for the Rutgers Business School's annual teaching award (2012, 2013, 2014, and 2016). My median teaching rating is 4.5 (out of 5.0), compared to the median business school teaching rating of 4.0. I have taught in various programs, including undergraduate, traditional MBA, Professional Accounting MBA, and Master of Accountancy. By popular vote from the undergraduate students, I was named the “Most Caring Professor 2012” by the Dean’s Advisory Council at Rutgers Business School.</p>
 
 <p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and have presented at the University of Chicago's JAR annual conference. I have also presented my research at Georgetown, HKUST, London Business School, NYU, Purdue, Rutgers, Singapore Management University, Temple, and Yale.</p>
+
 <hr />
 
-<br><br>
+<h4>File Attachments (recent comments of students):</h4>
+<ul>
+<li><a href="https://github.com/fscheong/fscheong.github.io/raw/master/NYU_SH_Course_Eval_Section_1.pdf">[NYU SH #1]</a></li>
+<li><a href="https://github.com/fscheong/fscheong.github.io/raw/master/NYU_SH_Course_Eval_Section_2.pdf">[NYU SH #2]</a>
+</ul>
+<br>
 
       </section>
       <footer>
