--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <li>Financial Accounting</li><br>
 <li>Managerial Accounting</li><br>
 <li>Intermediate Accounting II</li><br>
+<li>Accounting for Managers</li><br>
 <li>Financial Statement Analysis and Security Valuation</li><br>
 </ul>
 <hr />
