--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 <li>Financial Accounting</li><br>
 <li>Managerial Accounting</li><br>
 <li>Intermediate Accounting II</li><br>
-<li>Accounting for Managers</li><br>
-<li>Financial Statement Analysis and Security Valuation</li><br>
+<li>Accounting for Managers (MBA-level)</li><br>
+<li>Financial Statement Analysis and Security Valuation (MBA-level)</li><br>
 </ul>
 <hr />
 
