--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <meta name="googlebot" content="noindex">
     <title>FS Cheong</title>
     <base href="https://pages-themes.github.io/leap-day/" target="_blank">
-    <link rel="stylesheet" href="/leap-day/assets/css/style.css?v=4d2d418de73cc3f3cf5fd4656207cf73ff466e35">
+    <link rel="stylesheet" href="/leap-day/assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/leap-day/assets/js/main.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"></script>
 
 
   </head>
@@ -72,8 +71,8 @@
 <li>Financial Accounting</li><br>
 <li>Managerial Accounting</li><br>
 <li>Intermediate Accounting II</li><br>
-<li>Accounting for Managers (MBA-level)</li><br>
-<li>Financial Statement Analysis and Security Valuation (MBA-level)</li><br>
+<li>Accounting for Managers (MBA)</li><br>
+<li>Financial Statement Analysis and Security Valuation (MBA)</li><br>
 </ul>
 <hr />
 
