--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <h4>File Attachments (recent comments of students):</h4>
 <ul>
 <li><a href="https://github.com/fscheong/fscheong.github.io/raw/master/NYU_SH_Course_Eval_Section_1.pdf">[NYU SH #1]</a></li>
-<li><a href="https://github.com/fscheong/fscheong.github.io/raw/master/NYU_SH_Course_Eval_Section_2.pdf">[NYU SH #2]</a>
+<li><a href="https://github.com/fscheong/fscheong.github.io/raw/master/NYU_SH_Course_Eval_Section_2.pdf">[NYU SH #2]</a></li>
 </ul>
 <br>
 
