--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"></script>
 
   </head>
   <body>
@@ -40,13 +40,14 @@
       </nav>
       <section>
         <p><strong>Foong Soon Cheong</strong><img src="https://raw.githubusercontent.com/fscheong/fscheong.github.io/master/logo_NYU_SH.png" style="height:40px; float:right">
-        <br><em>Assistant Professor of Practice of Accounting</em></p>
+        <br><em id="title">Assistant Professor of Practice of Accounting</em></p>
 
 <br />
 
 <h1 id="header-Ed"><a href="#header-Ed"></a>Education</h1>
 
-<ul><li>PhD, Management<br> Yale University</li><br>
+<ul>
+<li>PhD, Management<br> Yale University</li><br>
 <li>MEng, High Performance Computing<br> National University of Singapore</li><br>
 <li>BEng, Electrical Engineering<br> National University of Singapore</li><br>
 <li>Exchange (one year), Computer Engineering<br> Carnegie Mellon University</li><br>
@@ -57,7 +58,8 @@
 
 <h1 id="header-Re"><a href="#header-Re"></a>Research</h1>
 
-<ul><li>Management of reported and forecast EPS, investor responses, and research implications (with Jake Thomas), <a href="http://pubsonline.informs.org/journal/mnsc"><em>Management Science</em></a> (Forthcoming).</li><br>
+<ul>
+<li>Management of reported and forecast EPS, investor responses, and research implications (with Jake Thomas), <a href="http://pubsonline.informs.org/journal/mnsc"><em>Management Science</em></a> (Forthcoming).</li><br>
 <li>Why do EPS forecast error and dispersion not vary with scale? Implications for analyst and managerial behavior (with Jake Thomas), <a href="https://dx.doi.org/10.1111/j.1475-679X.2010.00387.x"><em>Journal of Accounting Research</em></a>.</li><br>
 <li>Debunking two myths of the weekend effect (solo-authored), <a href="https://dx.doi.org/10.3390/ijfs4020007"><em>Int'l Journal of Financial Studies</em></a>.</li><br>
 <li>Analyst coverage and the profitability of bold recommendations (with Changhee Lee), <em>under 2nd round review at Journal of Accounting, Auditing, and Finance</em>.</li><br>
@@ -78,13 +80,18 @@
 
 
 <h1 id="header-Bi"><a href="#header-Bi"></a>Bio</h1>
+
+<ul><li>
 <p>I am on the faculty of New York University (NYU) – Shanghai, and was previously on the faculty of Rutgers Business School and Singapore Management University.</p>
 
 <p>At NYU Shanghai, I have taught Big Data and Accounting Analytics, Financial Accounting, and Managerial Accounting. My teaching ratings ranged from 4.6 to 4.9 (on a 5-point scale).</p>
 
 <p>At Rutgers, I was nominated four times by the department for the Rutgers Business School's annual teaching award (2012, 2013, 2014, and 2016). My median teaching rating is 4.5 (out of 5.0), compared to the median business school teaching rating of 4.0. I have taught in various programs, including undergraduate, traditional MBA, Professional Accounting MBA, and Master of Accountancy. By popular vote from the undergraduate students, I was named the “Most Caring Professor 2012” by the Dean’s Advisory Council at Rutgers Business School.</p>
 
-<p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and have presented at the University of Chicago's JAR annual conference. I have also presented my research at Georgetown, HKUST, London Business School, NYU, Purdue, Rutgers, Singapore Management University, Temple, and Yale.</p>
+<p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and have presented at the University of Chicago's JAR annual conference. I have also presented my research at Georgetown, HKUST, London Business School, NYU, Purdue, Rutgers, Singapore Management University, Temple, and Yale.</p>  
+</li></ul>
+
+
 
 <hr />
 
@@ -100,6 +107,22 @@
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+<script>
+$(function() {
+  $('#title').typed({
+    strings: ["Assistant Professor of Practice of Accounting"],
+     typeSpeed: 50,
+     backDelay: 500,
+     loop: false,
+     // defaults to false for infinite loop
+     loopCount: false,
+     showCursor: false,
+     callback: function(){ }
+  });
+});
+  
+</script>
 
   </body>
 </html>
