--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 <ul><li>
 <p>I am on the faculty of New York University (NYU) – Shanghai, and was previously on the faculty of Rutgers Business School and Singapore Management University.</p>
 
-<p>At NYU Shanghai, I have taught Big Data and Accounting Analytics, Financial Accounting, and Managerial Accounting. My teaching ratings ranged from 4.6 to 4.9 (on a 5-point scale).</p>
+<p>At NYU Shanghai, I have taught Big Data and Accounting Analytics, Financial Accounting, and Managerial Accounting. My teaching ratings range from 4.6 to 4.9 (on a 5-point scale).</p>
 
-<p>At Rutgers, I was nominated four times by the department for the Rutgers Business School's annual teaching award (2012, 2013, 2014, and 2016). My median teaching rating is 4.5 (out of 5.0), compared to the median business school teaching rating of 4.0. I have taught in various programs, including undergraduate, traditional MBA, Professional Accounting MBA, and Master of Accountancy. By popular vote from the undergraduate students, I was named the “Most Caring Professor 2012” by the Dean’s Advisory Council at Rutgers Business School.</p>
+<p>At Rutgers, I was nominated four times by the department for the Rutgers Business School's annual teaching award (2012, 2013, 2014, and 2016). My median teaching rating was 4.5 (out of 5.0), compared to the median business school teaching rating of 4.0. I have taught in various programs, including undergraduate, traditional MBA, Professional Accounting MBA, and Master of Accountancy. By popular vote from the undergraduate students, I was named the “Most Caring Professor 2012” by the Dean’s Advisory Council at Rutgers Business School.</p>
 
-<p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and have presented at the University of Chicago's JAR annual conference. I have also presented my research at Georgetown, HKUST, London Business School, NYU, Purdue, Rutgers, Singapore Management University, Temple, and Yale.</p>  
+<p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and I have presented at the University of Chicago's JAR annual conference. I have also presented my research at Georgetown, HKUST, London Business School, NYU, Purdue, Rutgers, Singapore Management University, Temple, and Yale.</p>  
 </li></ul>
 
 
