--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
 
 <hr />
 
-<h4>File Attachments (recent comments of students):</h4>
+<h4>File Attachments (some comments of students):</h4>
 <ul>
 <li><a href="https://github.com/fscheong/fscheong.github.io/raw/master/NYU_SH_Course_Eval_Section_1.pdf">[NYU SH #1]</a></li>
 <li><a href="https://github.com/fscheong/fscheong.github.io/raw/master/NYU_SH_Course_Eval_Section_2.pdf">[NYU SH #2]</a></li>
+<li><a href="https://github.com/fscheong/fscheong.github.io/raw/master/Rutgers_MBA_Course_Eval.pdf">[Rutgers MBA]</a></li>
 </ul>
 <br>
 
