--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
 <script>
 $(function() {
+  $("header").css("background", "#56068d");
   $('#title').typed({
     strings: ["Assistant Professor of Practice of Accounting"],
      typeSpeed: 50,
