--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
     <title>FS Cheong</title>
+    <link rel="stylesheet" href="style.css">
     <base href="https://pages-themes.github.io/leap-day/" target="_blank">
-    <link rel="stylesheet" href="/leap-day/assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/leap-day/assets/js/main.js"></script>
     <!--[if lt IE 9]>
@@ -120,7 +120,6 @@
 
 <script>
 $(function() {
-  $("header").css("background", "#56068d");
   $('#title').typed({
     strings: ["Assistant Professor of Practice of Accounting"],
      typeSpeed: 50,
