--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
     <title>FS Cheong</title>
+    <!--<base href="https://pages-themes.github.io/leap-day/" target="_blank">-->
     <link rel="stylesheet" href="style.css">
-    <base href="https://pages-themes.github.io/leap-day/" target="_blank">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="/leap-day/assets/js/main.js"></script>
+    <script src="main.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
