--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
-    <title>FS Cheong</title>
+    <title>FS_Cheong</title>
     <base href="https://pages-themes.github.io/leap-day/" target="_blank">
-    <link rel="stylesheet" href="https://fscheong.github.io/style.css">
+    <link rel="stylesheet" href="/leap-day/assets/css/style.css">    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/leap-day/assets/js/main.js"></script>
     <!--[if lt IE 9]>
