--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h1 id="header-Ed"><a href="#header-Ed"></a>Education</h1>
 
 <ul>
-<li>PhD, Management<br> Yale University</li><br>
+<li>PhD, Accounting<br> Yale University</li><br>
 <li>MEng, High Performance Computing<br> National University of Singapore</li><br>
 <li>BEng, Electrical Engineering<br> National University of Singapore</li><br>
 <li>Exchange (one year), Computer Engineering<br> Carnegie Mellon University</li><br>
