--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 <h1 id="header-Re"><a href="#header-Re"></a>Research</h1>
 
 <ul>
-<li>Management of reported and forecast EPS, investor responses, and research implications (with Jake Thomas), <a href="http://pubsonline.informs.org/journal/mnsc"><em>Management Science</em></a> (Forthcoming).</li><br>
-<li>Why do EPS forecast error and dispersion not vary with scale? Implications for analyst and managerial behavior (with Jake Thomas), <a href="https://dx.doi.org/10.1111/j.1475-679X.2010.00387.x"><em>Journal of Accounting Research</em></a>.</li><br>
-<li>Debunking two myths of the weekend effect (solo-authored), <a href="https://dx.doi.org/10.3390/ijfs4020007"><em>Int'l Journal of Financial Studies</em></a>.</li><br>
+<li><a href="http://pubsonline.informs.org/journal/mnsc">Management of reported and forecast EPS, investor responses, and research implications (with Jake Thomas), <em>Management Science</em></a> (Forthcoming).</li><br>
+<li><a href="https://dx.doi.org/10.1111/j.1475-679X.2010.00387.x">Why do EPS forecast error and dispersion not vary with scale? Implications for analyst and managerial behavior (with Jake Thomas), <em>Journal of Accounting Research</em></a>.</li><br>
+<li><a href="https://dx.doi.org/10.3390/ijfs4020007">Debunking two myths of the weekend effect (solo-authored), <em>Int'l Journal of Financial Studies</em></a>.</li><br>
 <li>Analyst coverage and the profitability of bold recommendations (with Changhee Lee), <em>under 2nd round review at Journal of Accounting, Auditing, and Finance</em>.</li><br>
 <li>Coverage changes and EPS forecast accuracy (with Changhee Lee and Dan Palmon), <em>under 2nd round review at Journal of Accounting, Auditing, and Finance</em>.</li>
 </ul>
