--- a/index.html
+++ b/index.html
@@ -99,9 +99,18 @@
 
 <p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and have presented at the University of Chicago's JAR annual conference. I have also presented my research at Georgetown, HKUST, London Business School, NYU, Purdue, Rutgers, Singapore Management University, Temple, and Yale.</p>  
 </li></ul>
+<hr />
 
 
-
+<h1 id="header-St"><a href="#header-St"></a>Student Projects + Exercises</h1>
+<ul>
+<li><a href="https://youtu.be/OIIvGVZ3zX8">Exercise on DOM tree and nodes</a></li><br>
+<li><a href="https://youtu.be/yJJSThdP3U8?t=6s">Graphics and UI draggable </a></li><br>
+<li><a href="https://youtu.be/-2wuzOFbiiE">Exercise on QuerySelector</a></li><br>
+<li><a href="https://drive.google.com/file/d/0B-eryStsLAswRzJSOHpweDNDb00/view?usp=sharing">Exercise on Exception handling</a></li><br>
+<li><a href="https://youtu.be/09LGeicDeHY">Localhost webpage </a></li><br>
+<li><a href="https://youtu.be/Y-rPkDGc3Gc">Chrome Extension for note-taking</a></li><br>
+</ul>
 <hr />
 
 <h4>Attachment:</h4>
