--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <hr />
 
 
-<h1 id="header-St"><a href="#header-St"></a>Student Projects (Big Data)</h1>
+<h1 id="header-St"><a href="#header-St"></a>Student Projects</h1>
 <ul>
 <li><a href="https://youtu.be/OIIvGVZ3zX8">Exercise on DOM tree and nodes</a></li><br>
 <li><a href="https://youtu.be/yJJSThdP3U8?t=6s">Graphics and UI draggable </a></li><br>
