--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <h1 id="header-Re"><a href="#header-Re"></a>Research</h1>
 
 <ul>
-<li><a href="http://pubsonline.informs.org/journal/mnsc"><span style="color:#666">Management of reported and forecast EPS, investor responses, and research implications (with Jake Thomas),</span> <em>Management Science</em></a> (Forthcoming).</li><br>
+<li><a href="http://ssrn.com/abstract=3007205"><span style="color:#666">Management of reported and forecast EPS, investor responses, and research implications (with Jake Thomas),</span> <em>Management Science</em></a> (Forthcoming).</li><br>
 <li><a href="https://dx.doi.org/10.1111/j.1475-679X.2010.00387.x"><span style="color:#666">Why do EPS forecast error and dispersion not vary with scale? Implications for analyst and managerial behavior (with Jake Thomas),</span> <em>Journal of Accounting Research</em></a>.</li><br>
 <li><a href="https://dx.doi.org/10.3390/ijfs4020007"><span style="color:#666">Debunking two myths of the weekend effect (solo-authored),</span> <em>Int'l Journal of Financial Studies</em></a>.</li><br>
 <li>Analyst coverage and the profitability of bold recommendations (with Changhee Lee), <em>under 2nd round review at Journal of Accounting, Auditing, and Finance</em>.</li><br>
