--- a/index.html
+++ b/index.html
@@ -105,11 +105,13 @@
 <h1 id="header-St"><a href="#header-St"></a>Student Projects</h1>
 <ul>
 <li><a href="https://youtu.be/OIIvGVZ3zX8">Exercise on DOM tree and nodes</a></li><br>
-<li><a href="https://youtu.be/yJJSThdP3U8?t=6s">Graphics and UI draggable </a></li><br>
-<li><a href="https://youtu.be/-2wuzOFbiiE">Exercise on QuerySelector</a></li><br>
+<li><a href="https://youtu.be/yJJSThdP3U8?t=8s">Graphics and UI draggable </a></li><br>
+<li><a href="https://youtu.be/5v07WbsTnA4?t=5s">Multiplication "by hand"</a></li><br>
+<li><a href="https://youtu.be/-2wuzOFbiiE?t=9s">Exercise on QuerySelector</a></li><br>
 <li><a href="https://drive.google.com/file/d/0B-eryStsLAswRzJSOHpweDNDb00/view?usp=sharing">Exercise on Exception handling</a></li><br>
 <li><a href="https://youtu.be/09LGeicDeHY">Localhost webpage </a></li><br>
-<li><a href="https://youtu.be/Y-rPkDGc3Gc">Chrome Extension for note-taking</a></li><br>
+<li><a href="https://youtu.be/4iEaEloTff8">Online Accounting System</a></li><br>
+<li><a href="https://youtu.be/Y-rPkDGc3Gc?t=11s">Chrome Extension for note-taking</a></li><br>
 </ul>
 <hr />
 
