--- a/index.html
+++ b/index.html
@@ -53,11 +53,21 @@
 
 <br />
 
+<style>
+  .deg ul {display:none;}
+  .deg:hover ul {display:block;}
+
+  .deg br {display:block;}
+  .deg:hover + br {display:none;}
+
+</style>
+
 <h1 id="header-Ed"><a href="#header-Ed"></a>Education</h1>
 
 <ul>
 <li>PhD, Accounting<br> Yale University</li><br>
-<li>MEng, High Performance Computing<br> National University of Singapore</li><br>
+<li class="deg">MEng, High Performance Computing<br> National University of Singapore
+  <ul><li><a href="http://www.mit.edu/~dbertsim/students.html">Advisor: Dimitris Bertsimas<br>MIT Operations Research Center</a></li></ul></li><br>
 <li>BEng, Electrical Engineering<br> National University of Singapore</li><br>
 <li>Exchange (one year), Computer Engineering<br> Carnegie Mellon University</li><br>
 <li>Association of Chartered Certified Accountants (ACCA)</li>
