--- a/index.html
+++ b/index.html
@@ -53,21 +53,11 @@
 
 <br />
 
-<style>
-  .deg ul {display:none;}
-  .deg:hover ul {display:block;}
-
-  .deg br {display:block;}
-  .deg:hover + br {display:none;}
-
-</style>
-
 <h1 id="header-Ed"><a href="#header-Ed"></a>Education</h1>
 
 <ul>
 <li>PhD, Accounting<br> Yale University</li><br>
-<li class="deg">MEng, High Performance Computing<br> National University of Singapore
-  <ul><li><a href="http://www.mit.edu/~dbertsim/students.html">Advisor: Dimitris Bertsimas<br>MIT Operations Research Center</a></li></ul></li><br>
+<li>MEng, High Performance Computing<br> National University of Singapore</li><br>
 <li>BEng, Electrical Engineering<br> National University of Singapore</li><br>
 <li>Exchange (one year), Computer Engineering<br> Carnegie Mellon University</li><br>
 <li>Association of Chartered Certified Accountants (ACCA)</li>
@@ -105,6 +95,8 @@
 
 <p>At NYU Shanghai, I have taught Big Data and Accounting Analytics, Financial Accounting, and Managerial Accounting. My teaching ratings range from 4.6 to 4.9 (on a 5-point scale).</p>
 
+<p>In terms of service at NYU Shanghai, I am serving as a member in the Grading Policy Committee (led by Provost), and the Contract Faculty Review Committee (by Dean of Arts & Sciences).</p>  
+  
 <p>At Rutgers, I was nominated four times by the department for the Rutgers Business School's annual teaching award (2012, 2013, 2014, and 2016). My median teaching rating was 4.5 (out of 5.0), compared to the median business school teaching rating of 4.0. I have taught in various programs, including undergraduate, traditional MBA, Professional Accounting MBA, and Master of Accountancy. By popular vote from the undergraduate students, I was named the “Most Caring Professor 2012” by the Dean’s Advisory Council at Rutgers Business School.</p>
 
 <p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and have presented at the University of Chicago's JAR annual conference (six papers were selected for this annual event). I have also presented my research at Georgetown, HKUST, London Business School, NYU, Purdue, Rutgers, Singapore Management University, Temple, and Yale.</p>  
