--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   
 <p>At Rutgers, I was nominated four times by the department for the Rutgers Business School's annual teaching award (2012, 2013, 2014, and 2016). My median teaching rating was 4.5 (out of 5.0), compared to the median business school teaching rating of 4.0. I have taught in various programs, including undergraduate, traditional MBA, Professional Accounting MBA, and Master of Accountancy. By popular vote from the undergraduate students, I was named the “Most Caring Professor 2012” by the Dean’s Advisory Council at Rutgers Business School.</p>
 
-<p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and have presented at the University of Chicago's JAR annual conference (six papers were selected for this annual event). I have also presented my research at Georgetown, HKUST, London Business School, NYU, Purdue, Rutgers, Singapore Management University, Temple, and Yale.</p>  
+<p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and have presented at the University of Chicago's JAR annual conference (six papers were selected for this annual event). I have also presented my research at Georgetown, HKUST, London Business School, NUS (Singapore), NYU, Purdue, Rutgers, SMU (Singapore), Temple, and Yale.</p>  
 </li></ul>
 <hr />
 
