--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
         <ul></ul>
       </nav>
       <section>
-        <p><strong>Foong Soon Cheong</strong><img src="https://raw.githubusercontent.com/fscheong/fscheong.github.io/master/logo_NYU_SH.png" style="height:40px; float:right">
-        <br><em id="title">Assistant Professor of Practice of Accounting</em></p>
-
+        <p id="myName"><strong>Foong Soon Cheong</strong><img src="https://raw.githubusercontent.com/fscheong/fscheong.github.io/master/logo_NYU_SH.png" style="height:40px; float:right">
 <br />
 
 <h1 id="header-Ed"><a href="#header-Ed"></a>Education</h1>
@@ -131,8 +129,8 @@
 
 <script>
 $(function() {
-  $('#title').typed({
-    strings: ["Assistant Professor of Practice of Accounting"],
+  $('#myName').typed({
+    strings: ["Foong Soon Cheong"],
      typeSpeed: 50,
      backDelay: 500,
      loop: false,
