--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul></ul>
       </nav>
       <section>
-        <p id="myName"><strong>Foong Soon Cheong</strong><img src="https://raw.githubusercontent.com/fscheong/fscheong.github.io/master/logo_NYU_SH.png" style="height:40px; float:right">
+        <p><strong id="myName">Foong Soon Cheong</strong><img src="https://raw.githubusercontent.com/fscheong/fscheong.github.io/master/logo_NYU_SH.png" style="height:40px; float:right">
 <br />
 
 <h1 id="header-Ed"><a href="#header-Ed"></a>Education</h1>
