--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
       <header>
         <h1>Foong Soon Cheong</h1>
-        <p>New York University – Shanghai</p>
+        <p> </p>
       </header>
 
       <div id="banner">
           <div class="downloads">
             <span>Email:</span>
             <ul>
-              <li><a href="mailto:fscheong@nyu.edu" class="button">fscheong@nyu.edu</a></li>
+              <li><a href="mailto:fscheong@aya.yale.edu" class="button">fscheong@aya.yale.edu</a></li>
             </ul>
           </div>
         
@@ -89,7 +89,7 @@
 <h1 id="header-Bi"><a href="#header-Bi"></a>Bio</h1>
 
 <ul><li>
-<p>I am on the faculty of New York University (NYU) – Shanghai, and was previously on the faculty of Rutgers Business School and Singapore Management University.</p>
+<p>I was previously on the faculty of New York University (NYU) – Shanghai, Rutgers Business School and Singapore Management University.</p>
 
 <p>At NYU Shanghai, I have taught Big Data and Accounting Analytics, Financial Accounting, and Managerial Accounting. My teaching ratings range from 4.6 to 4.9 (on a 5-point scale).</p>
 
