--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul></ul>
       </nav>
       <section>
-        <p><strong id="myName">Foong Soon Cheong</strong><img src="https://raw.githubusercontent.com/fscheong/fscheong.github.io/master/logo_NYU_SH.png" style="height:40px; float:right">
+        <p><strong id="myName">Foong Soon Cheong</strong><img src="" style="height:40px; float:right">
 <br />
 
 <h1 id="header-Ed"><a href="#header-Ed"></a>Education</h1>
@@ -117,7 +117,7 @@
 
 <h4>Attachment:</h4>
 <ul>
-<li><a href="https://github.com/fscheong/fscheong.github.io/raw/master/Teaching_Evaluation.pdf">Teaching Evaluation</a></li>
+<li><a href="">Teaching Evaluation</a></li>
 </ul>
 <br>
 
