--- a/index.html
+++ b/index.html
@@ -1,1 +1,146 @@
-Hello World
+<!doctype html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="robots" content="noindex">
+    <meta name="googlebot" content="noindex">
+    <title>Overview_FS_Cheong</title>
+    <base href="https://pages-themes.github.io/leap-day/" target="_blank">
+    <link rel="stylesheet" href="/leap-day/assets/css/style.css">    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="/leap-day/assets/js/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-102633901-1', 'auto');
+  ga('send', 'pageview');
+</script>
+    
+  </head>
+  <body>
+
+      <header>
+        <h1>Foong Soon Cheong</h1>
+        <p> </p>
+      </header>
+
+      <div id="banner">
+          <div class="downloads">
+            <span>Email:</span>
+            <ul>
+              <li><a href="mailto:fscheong@aya.yale.edu" class="button">fscheong@aya.yale.edu</a></li>
+            </ul>
+          </div>
+        
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <p><strong id="myName">Foong Soon Cheong</strong><img src="" style="height:40px; float:right">
+<br />
+
+<h1 id="header-Ed"><a href="#header-Ed"></a>Education</h1>
+
+<ul>
+<li>PhD, Accounting<br> Yale University</li><br>
+<li>MEng, High Performance Computing<br> National University of Singapore</li><br>
+<li>BEng, Electrical Engineering<br> National University of Singapore</li><br>
+<li>Exchange (one year), Computer Engineering<br> Carnegie Mellon University</li><br>
+<li>Association of Chartered Certified Accountants (ACCA)</li>
+</ul>
+
+<hr />
+
+<h1 id="header-Re"><a href="#header-Re"></a>Research</h1>
+
+<ul>
+<li><a href="https://doi.org/10.1287/mnsc.2017.2832"><span style="color:#666">Management of reported and forecast EPS, investor responses, and research implications (with Jake Thomas),</span> <em>Management Science</em></a> (Forthcoming).</li><br>
+<li><a href="https://dx.doi.org/10.1111/j.1475-679X.2010.00387.x"><span style="color:#666">Why do EPS forecast error and dispersion not vary with scale? Implications for analyst and managerial behavior (with Jake Thomas),</span> <em>Journal of Accounting Research</em></a>.</li><br>
+<li><a href="https://dx.doi.org/10.3390/ijfs4020007"><span style="color:#666">Debunking two myths of the weekend effect (solo-authored),</span> <em>Int'l Journal of Financial Studies</em></a>.</li><br>
+<li><a href="https://dx.doi.org/10.1177/0148558X17750804"><span style="color:#666">Coverage changes and EPS forecast accuracy (with Changhee Lee and Dan Palmon),</span> <em>Journal of Accounting, Auditing, and Finance</em></a>.</li><br>
+</ul>
+<hr />
+
+
+<h1 id="header-Te"><a href="#header-Te"></a>Teaching</h1>
+<ul><li>Big Data and Accounting Analytics</li><br>
+<li>Financial Accounting</li><br>
+<li>Managerial Accounting</li><br>
+<li>Intermediate Accounting II</li><br>
+<li>Accounting for Managers (MBA)</li><br>
+<li>Financial Statement Analysis and Security Valuation (MBA)</li><br>
+</ul>
+<hr />
+
+
+<h1 id="header-Bi"><a href="#header-Bi"></a>Bio</h1>
+
+<ul><li>
+<p>I was previously on the faculty of New York University (NYU) – Shanghai, Rutgers Business School and Singapore Management University.</p>
+
+<p>At NYU Shanghai, I have taught Big Data and Accounting Analytics, Financial Accounting, and Managerial Accounting. My teaching ratings range from 4.6 to 4.9 (on a 5-point scale).</p>
+
+<p>In terms of service at NYU Shanghai, I am serving as a member in the Grading Policy Committee (led by Provost), and the Contract Faculty Review Committee (by Dean of Arts & Sciences).</p>  
+  
+<p>At Rutgers, I was nominated four times by the department for the Rutgers Business School's annual teaching award (2012, 2013, 2014, and 2016). My median teaching rating was 4.5 (out of 5.0), compared to the median business school teaching rating of 4.0. I have taught in various programs, including undergraduate, traditional MBA, Professional Accounting MBA, and Master of Accountancy. By popular vote from the undergraduate students, I was named the “Most Caring Professor 2012” by the Dean’s Advisory Council at Rutgers Business School.</p>
+
+<p>As a researcher, I have published in the <em>Journal of Accounting Research</em> (JAR) and <em>Management Science</em>, and have presented at the University of Chicago's JAR annual conference (six papers were selected for this annual event). I have also presented my research at Georgetown, HKUST, London Business School, NUS (Singapore), NYU, Purdue, Rutgers, SMU (Singapore), Temple, and Yale.</p>  
+</li></ul>
+<hr />
+
+
+<h1 id="header-St"><a href="#header-St"></a>Student Projects</h1>
+<ul>
+<li><a href="https://youtu.be/OIIvGVZ3zX8">Exercise on DOM tree and nodes</a></li><br>
+<li><a href="https://youtu.be/yJJSThdP3U8?t=8s">Graphics and UI draggable </a></li><br>
+<li><a href="https://youtu.be/5v07WbsTnA4?t=5s">Multiplication "by hand"</a></li><br>
+<li><a href="https://youtu.be/-2wuzOFbiiE?t=9s">Exercise on QuerySelector</a></li><br>
+<li><a href="https://drive.google.com/file/d/0B-eryStsLAswRzJSOHpweDNDb00/view?usp=sharing">Exercise on Exception handling</a></li><br>
+<li><a href="https://youtu.be/09LGeicDeHY">Localhost webpage </a></li><br>
+<li><a href="https://youtu.be/4iEaEloTff8">Online Accounting System</a></li><br>
+<li><a href="https://youtu.be/Y-rPkDGc3Gc?t=11s">Chrome Extension for note-taking</a></li><br>
+</ul>
+<hr />
+
+<h4>Attachment:</h4>
+<ul>
+<li>Teaching Evaluation</li>
+</ul>
+<br>
+
+      </section>
+      <footer>
+      </footer>
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+<script>
+$(function() {
+  $('#myName').typed({
+    strings: ["Foong Soon Cheong"],
+     typeSpeed: 50,
+     backDelay: 500,
+     loop: false,
+     // defaults to false for infinite loop
+     loopCount: false,
+     showCursor: false,
+     callback: function(){ }
+  });
+});
+  
+</script>
+
+  </body>
+</html>
